--- a/app/src/main/res/drawable/oval.xml
+++ b/app/src/main/res/drawable/oval.xml
@@ -1,27 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:left="5dp"
+        android:right="5dp"
+        android:top="5dp"
+        android:bottom="5dp">
 
-    <corners
-        android:bottomLeftRadius="30dp"
-        android:bottomRightRadius="30dp"
-        android:radius="60dp"
-        android:topLeftRadius="30dp"
-        android:topRightRadius="30dp" />
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
 
-    <gradient
-        android:startColor="#ffd500"
-        android:endColor="#fcb000"
-        android:angle="180"/>
+            <corners
+                android:bottomLeftRadius="30dp"
+                android:bottomRightRadius="30dp"
+                android:radius="60dp"
+                android:topLeftRadius="30dp"
+                android:topRightRadius="30dp" />
 
-    <padding
-        android:bottom="0dp"
-        android:left="0dp"
-        android:right="0dp"
-        android:top="0dp" />
+            <gradient
+                android:startColor="#ffd500"
+                android:endColor="#fcb000"
+                android:angle="180"/>
 
-    <size
-        android:height="60dp"
-        android:width="120dp" />
+            <padding
+                android:bottom="0dp"
+                android:left="0dp"
+                android:right="0dp"
+                android:top="0dp" />
 
-</shape>
+            <size
+                android:height="60dp"
+                android:width="120dp" />
+
+        </shape>
+    </item>
+</layer-list>
