--- a/app/src/main/res/layout/redeem_layout.xml
+++ b/app/src/main/res/layout/redeem_layout.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="280dp"
+    android:layout_width="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
-    android:layout_margin="15dp"
-    android:layout_height="200dp">
+    android:padding="15dp"
+    android:layout_height="230dp">
 
 
     <ProgressBar
@@ -26,6 +27,7 @@
         android:layout_centerVertical="true"
         android:layout_marginTop="20dp"
         android:visibility="gone"
+        android:textColor="@color/black"
         android:layout_marginBottom="20dp"
         android:text="$10.00 is added. \n Your new balance is $30.12"
         android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -60,6 +62,8 @@
             android:id="@+id/captcha_edit_text"
             android:inputType="textVisiblePassword"
             android:hint="Enter code"
+            android:textColorHint="@color/grey"
+            android:textColor="@color/black"
             fontPath="fonts/brownregular.ttf"
             />
         <TextView
@@ -76,11 +80,11 @@
             />
         <TextView
             android:gravity="left"
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="10sp"
-            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"
+            android:layout_margin="10dp"
             android:text="@string/redeem"
             fontPath="fonts/brownregular.ttf"
             />
@@ -88,17 +92,18 @@
     </LinearLayout>
 
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/redeem_edit_layout">
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:orientation="horizontal"
+            android:layout_weight="2.5"
+            android:gravity="center_vertical"
             android:id="@+id/layout_logo"
-            android:layout_margin="0dp"
             android:alpha="0.2">
 
 
@@ -126,21 +131,20 @@
 
         </LinearLayout>
         <Button
-            android:layout_width="80dp"
-            android:layout_height="30dp"
+            android:layout_width="90dp"
+            android:layout_height="45dp"
             android:id="@+id/redeem_Button"
             android:textSize="12sp"
-            android:layout_margin="5dp"
-            android:layout_gravity="right"
             android:text="Redeem"
             android:elevation="0dp"
             android:enabled="false"
             android:alpha="0.2"
+            android:layout_weight="1"
             android:layout_alignParentRight="true"
             android:background="@drawable/oval"
             android:textColor="@color/black"
             fontPath="fonts/brownregular.ttf"
             />
-    </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
