--- a/app/src/main/res/layout/robotcapcha.xml
+++ b/app/src/main/res/layout/robotcapcha.xml
@@ -10,6 +10,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_width="match_parent"
+        android:background="@color/white"
         android:layout_height="300dp"/>
     <View
         android:layout_width="match_parent"
