--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1061,6 +1061,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="10dp"
+            android:layout_marginBottom="80dp"
             android:clickable="true"
             android:foreground="@drawable/ripple_effect"
             android:visibility="visible"
